@@ -36,6 +36,8 @@ Features added
   text
 * #9176: i18n: Emit a debug message if message catalog file not found under
   :confval:`locale_dirs`
+* #6525: linkcheck: Add :confval:`linkcheck_warn_redirects` to emit a warning
+  when the hyperlink is redirected
 * #9097: Optimize the paralell build
 * #9131: Add :confval:`nitpick_ignore_regex` to ignore nitpicky warnings using
   regular expressions
